k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: polaris
  labels:
    name: polaris
    environment: production
